C-1/usetool/tmp/parse.output
Terminals unused in grammar

   VOID


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: /* empty */
    3           | ExtDef ExtDefList

    4 ExtDef: VarDec
    5       | FuncDef

    6 VarDec: Specificer VarList ';'
    7       | Specificer ';'

    8 VarList: Var ',' VarList
    9        | Var

   10 Var: ID
   11    | ID '=' Exp
   12    | Var '[' C_INT ']'

   13 FuncDef: Specificer FuncHeader CompSt

   14 FuncHeader: ID '(' ParamList ')'

   15 ParamList: /* empty */
   16          | Param ',' ParamList
   17          | Param

   18 Param: Specificer ID

   19 Specificer: INT
   20           | FLOAT
   21           | CHAR
   22           | BOOL
   23           | STRUCT TagOpt '{' VarDecList '}'
   24           | STRUCT ID

   25 TagOpt: /* empty */
   26       | ID

   27 VarDecList: VarDec VarDecList
   28           | VarDec

   29 CompSt: '{' StmtList '}'

   30 StmtList: /* empty */
   31         | Stmt StmtList

   32 Stmt: Exp ';'
   33     | ID '=' Exp ';'
   34     | ID OP_ASSIGN Exp ';'
   35     | IF '(' Exp ')' Stmt
   36     | IF '(' Exp ')' Stmt ELSE Stmt
   37     | WHILE '(' Exp ')' Stmt
   38     | RETURN Exp ';'
   39     | CompSt
   40     | VarDec

   41 Exp: Exp '+' Exp
   42    | Exp '-' Exp
   43    | Exp '*' Exp
   44    | Exp '/' Exp
   45    | Exp '%' Exp
   46    | Exp REL_OP Exp
   47    | S_PLUS Exp
   48    | S_MINUS Exp
   49    | Exp S_PLUS
   50    | Exp S_MINUS
   51    | Exp AND Exp
   52    | Exp OR Exp
   53    | '!' Exp
   54    | '-' Exp
   55    | '(' Exp ')'
   56    | Exp ',' Exp
   57    | ID
   58    | C_INT
   59    | C_FLOAT
   60    | C_CHAR
   61    | TRUE
   62    | FALSE
   63    | ID '(' RParamList ')'
   64    | ID '.' ID

   65 RParamList: /* empty */
   66           | RParam ',' RParamList
   67           | RParam

   68 RParam: Exp


Terminals, with rules where they appear

$end (0) 0
'!' (33) 53
'%' (37) 45
'(' (40) 14 35 36 37 55 63
')' (41) 14 35 36 37 55 63
'*' (42) 43
'+' (43) 41
',' (44) 8 16 56 66
'-' (45) 42 54
'.' (46) 64
'/' (47) 44
';' (59) 6 7 32 33 34 38
'=' (61) 11 33
'[' (91) 12
']' (93) 12
'{' (123) 23 29
'}' (125) 23 29
error (256)
S_PLUS (258) 47 49
S_MINUS (259) 48 50
AND (260) 51
OR (261) 52
IF (262) 35 36
ELSE (263) 36
WHILE (264) 37
RETURN (265) 38
STRUCT (266) 23 24
REL_OP (267) 46
OP_ASSIGN (268) 34
ID (269) 10 11 14 18 24 26 33 34 57 63 64
C_INT (270) 12 58
C_FLOAT (271) 59
C_CHAR (272) 60
INT (273) 19
FLOAT (274) 20
CHAR (275) 21
VOID (276)
BOOL (277) 22
TRUE (278) 61
FALSE (279) 62


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
Program (42)
    on left: 1, on right: 0
ExtDefList (43)
    on left: 2 3, on right: 1 3
ExtDef (44)
    on left: 4 5, on right: 3
VarDec (45)
    on left: 6 7, on right: 4 27 28 40
VarList (46)
    on left: 8 9, on right: 6 8
Var (47)
    on left: 10 11 12, on right: 8 9 12
FuncDef (48)
    on left: 13, on right: 5
FuncHeader (49)
    on left: 14, on right: 13
ParamList (50)
    on left: 15 16 17, on right: 14 16
Param (51)
    on left: 18, on right: 16 17
Specificer (52)
    on left: 19 20 21 22 23 24, on right: 6 7 13 18
TagOpt (53)
    on left: 25 26, on right: 23
VarDecList (54)
    on left: 27 28, on right: 23 27
CompSt (55)
    on left: 29, on right: 13 39
StmtList (56)
    on left: 30 31, on right: 29 31
Stmt (57)
    on left: 32 33 34 35 36 37 38 39 40, on right: 31 35 36 37
Exp (58)
    on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58
    59 60 61 62 63 64, on right: 11 32 33 34 35 36 37 38 41 42 43 44
    45 46 47 48 49 50 51 52 53 54 55 56 68
RParamList (59)
    on left: 65 66 67, on right: 63 66
RParam (60)
    on left: 68, on right: 66 67


State 0

    0 $accept: . Program $end

    STRUCT  shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    CHAR    shift, and go to state 4
    BOOL    shift, and go to state 5

    $default  reduce using rule 2 (ExtDefList)

    Program     go to state 6
    ExtDefList  go to state 7
    ExtDef      go to state 8
    VarDec      go to state 9
    FuncDef     go to state 10
    Specificer  go to state 11


State 1

   23 Specificer: STRUCT . TagOpt '{' VarDecList '}'
   24           | STRUCT . ID

    ID  shift, and go to state 12

    $default  reduce using rule 25 (TagOpt)

    TagOpt  go to state 13


State 2

   19 Specificer: INT .

    $default  reduce using rule 19 (Specificer)


State 3

   20 Specificer: FLOAT .

    $default  reduce using rule 20 (Specificer)


State 4

   21 Specificer: CHAR .

    $default  reduce using rule 21 (Specificer)


State 5

   22 Specificer: BOOL .

    $default  reduce using rule 22 (Specificer)


State 6

    0 $accept: Program . $end

    $end  shift, and go to state 14


State 7

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 8

    3 ExtDefList: ExtDef . ExtDefList

    STRUCT  shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    CHAR    shift, and go to state 4
    BOOL    shift, and go to state 5

    $default  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 15
    ExtDef      go to state 8
    VarDec      go to state 9
    FuncDef     go to state 10
    Specificer  go to state 11


State 9

    4 ExtDef: VarDec .

    $default  reduce using rule 4 (ExtDef)


State 10

    5 ExtDef: FuncDef .

    $default  reduce using rule 5 (ExtDef)


State 11

    6 VarDec: Specificer . VarList ';'
    7       | Specificer . ';'
   13 FuncDef: Specificer . FuncHeader CompSt

    ';'  shift, and go to state 16
    ID   shift, and go to state 17

    VarList     go to state 18
    Var         go to state 19
    FuncHeader  go to state 20


State 12

   24 Specificer: STRUCT ID .
   26 TagOpt: ID .

    '{'       reduce using rule 26 (TagOpt)
    $default  reduce using rule 24 (Specificer)


State 13

   23 Specificer: STRUCT TagOpt . '{' VarDecList '}'

    '{'  shift, and go to state 21


State 14

    0 $accept: Program $end .

    $default  accept


State 15

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 16

    7 VarDec: Specificer ';' .

    $default  reduce using rule 7 (VarDec)


State 17

   10 Var: ID .
   11    | ID . '=' Exp
   14 FuncHeader: ID . '(' ParamList ')'

    '='  shift, and go to state 22
    '('  shift, and go to state 23

    $default  reduce using rule 10 (Var)


State 18

    6 VarDec: Specificer VarList . ';'

    ';'  shift, and go to state 24


State 19

    8 VarList: Var . ',' VarList
    9        | Var .
   12 Var: Var . '[' C_INT ']'

    ','  shift, and go to state 25
    '['  shift, and go to state 26

    $default  reduce using rule 9 (VarList)


State 20

   13 FuncDef: Specificer FuncHeader . CompSt

    '{'  shift, and go to state 27

    CompSt  go to state 28


State 21

   23 Specificer: STRUCT TagOpt '{' . VarDecList '}'

    STRUCT  shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    CHAR    shift, and go to state 4
    BOOL    shift, and go to state 5

    VarDec      go to state 29
    Specificer  go to state 30
    VarDecList  go to state 31


State 22

   11 Var: ID '=' . Exp

    S_PLUS   shift, and go to state 32
    S_MINUS  shift, and go to state 33
    '-'      shift, and go to state 34
    '!'      shift, and go to state 35
    '('      shift, and go to state 36
    ID       shift, and go to state 37
    C_INT    shift, and go to state 38
    C_FLOAT  shift, and go to state 39
    C_CHAR   shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42

    Exp  go to state 43


State 23

   14 FuncHeader: ID '(' . ParamList ')'

    STRUCT  shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    CHAR    shift, and go to state 4
    BOOL    shift, and go to state 5

    $default  reduce using rule 15 (ParamList)

    ParamList   go to state 44
    Param       go to state 45
    Specificer  go to state 46


State 24

    6 VarDec: Specificer VarList ';' .

    $default  reduce using rule 6 (VarDec)


State 25

    8 VarList: Var ',' . VarList

    ID  shift, and go to state 47

    VarList  go to state 48
    Var      go to state 19


State 26

   12 Var: Var '[' . C_INT ']'

    C_INT  shift, and go to state 49


State 27

   29 CompSt: '{' . StmtList '}'

    S_PLUS   shift, and go to state 32
    S_MINUS  shift, and go to state 33
    '-'      shift, and go to state 34
    '!'      shift, and go to state 35
    '('      shift, and go to state 36
    '{'      shift, and go to state 27
    IF       shift, and go to state 50
    WHILE    shift, and go to state 51
    RETURN   shift, and go to state 52
    STRUCT   shift, and go to state 1
    ID       shift, and go to state 53
    C_INT    shift, and go to state 38
    C_FLOAT  shift, and go to state 39
    C_CHAR   shift, and go to state 40
    INT      shift, and go to state 2
    FLOAT    shift, and go to state 3
    CHAR     shift, and go to state 4
    BOOL     shift, and go to state 5
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42

    $default  reduce using rule 30 (StmtList)

    VarDec      go to state 54
    Specificer  go to state 30
    CompSt      go to state 55
    StmtList    go to state 56
    Stmt        go to state 57
    Exp         go to state 58


State 28

   13 FuncDef: Specificer FuncHeader CompSt .

    $default  reduce using rule 13 (FuncDef)


State 29

   27 VarDecList: VarDec . VarDecList
   28           | VarDec .

    STRUCT  shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    CHAR    shift, and go to state 4
    BOOL    shift, and go to state 5

    $default  reduce using rule 28 (VarDecList)

    VarDec      go to state 29
    Specificer  go to state 30
    VarDecList  go to state 59


State 30

    6 VarDec: Specificer . VarList ';'
    7       | Specificer . ';'

    ';'  shift, and go to state 16
    ID   shift, and go to state 47

    VarList  go to state 18
    Var      go to state 19


State 31

   23 Specificer: STRUCT TagOpt '{' VarDecList . '}'

    '}'  shift, and go to state 60


State 32

   47 Exp: S_PLUS . Exp

    S_PLUS   shift, and go to state 32
    S_MINUS  shift, and go to state 33
    '-'      shift, and go to state 34
    '!'      shift, and go to state 35
    '('      shift, and go to state 36
    ID       shift, and go to state 37
    C_INT    shift, and go to state 38
    C_FLOAT  shift, and go to state 39
    C_CHAR   shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42

    Exp  go to state 61


State 33

   48 Exp: S_MINUS . Exp

    S_PLUS   shift, and go to state 32
    S_MINUS  shift, and go to state 33
    '-'      shift, and go to state 34
    '!'      shift, and go to state 35
    '('      shift, and go to state 36
    ID       shift, and go to state 37
    C_INT    shift, and go to state 38
    C_FLOAT  shift, and go to state 39
    C_CHAR   shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42

    Exp  go to state 62


State 34

   54 Exp: '-' . Exp

    S_PLUS   shift, and go to state 32
    S_MINUS  shift, and go to state 33
    '-'      shift, and go to state 34
    '!'      shift, and go to state 35
    '('      shift, and go to state 36
    ID       shift, and go to state 37
    C_INT    shift, and go to state 38
    C_FLOAT  shift, and go to state 39
    C_CHAR   shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42

    Exp  go to state 63


State 35

   53 Exp: '!' . Exp

    S_PLUS   shift, and go to state 32
    S_MINUS  shift, and go to state 33
    '-'      shift, and go to state 34
    '!'      shift, and go to state 35
    '('      shift, and go to state 36
    ID       shift, and go to state 37
    C_INT    shift, and go to state 38
    C_FLOAT  shift, and go to state 39
    C_CHAR   shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42

    Exp  go to state 64


State 36

   55 Exp: '(' . Exp ')'

    S_PLUS   shift, and go to state 32
    S_MINUS  shift, and go to state 33
    '-'      shift, and go to state 34
    '!'      shift, and go to state 35
    '('      shift, and go to state 36
    ID       shift, and go to state 37
    C_INT    shift, and go to state 38
    C_FLOAT  shift, and go to state 39
    C_CHAR   shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42

    Exp  go to state 65


State 37

   57 Exp: ID .
   63    | ID . '(' RParamList ')'
   64    | ID . '.' ID

    '.'  shift, and go to state 66
    '('  shift, and go to state 67

    $default  reduce using rule 57 (Exp)


State 38

   58 Exp: C_INT .

    $default  reduce using rule 58 (Exp)


State 39

   59 Exp: C_FLOAT .

    $default  reduce using rule 59 (Exp)


State 40

   60 Exp: C_CHAR .

    $default  reduce using rule 60 (Exp)


State 41

   61 Exp: TRUE .

    $default  reduce using rule 61 (Exp)


State 42

   62 Exp: FALSE .

    $default  reduce using rule 62 (Exp)


State 43

   11 Var: ID '=' Exp .
   41 Exp: Exp . '+' Exp
   42    | Exp . '-' Exp
   43    | Exp . '*' Exp
   44    | Exp . '/' Exp
   45    | Exp . '%' Exp
   46    | Exp . REL_OP Exp
   49    | Exp . S_PLUS
   50    | Exp . S_MINUS
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   56    | Exp . ',' Exp

    S_PLUS   shift, and go to state 68
    S_MINUS  shift, and go to state 69
    '+'      shift, and go to state 70
    '-'      shift, and go to state 71
    '*'      shift, and go to state 72
    '/'      shift, and go to state 73
    '%'      shift, and go to state 74
    AND      shift, and go to state 75
    OR       shift, and go to state 76
    REL_OP   shift, and go to state 78

    $default  reduce using rule 11 (Var)


State 44

   14 FuncHeader: ID '(' ParamList . ')'

    ')'  shift, and go to state 79


State 45

   16 ParamList: Param . ',' ParamList
   17          | Param .

    ','  shift, and go to state 80

    $default  reduce using rule 17 (ParamList)


State 46

   18 Param: Specificer . ID

    ID  shift, and go to state 81


State 47

   10 Var: ID .
   11    | ID . '=' Exp

    '='  shift, and go to state 22

    $default  reduce using rule 10 (Var)


State 48

    8 VarList: Var ',' VarList .

    $default  reduce using rule 8 (VarList)


State 49

   12 Var: Var '[' C_INT . ']'

    ']'  shift, and go to state 82


State 50

   35 Stmt: IF . '(' Exp ')' Stmt
   36     | IF . '(' Exp ')' Stmt ELSE Stmt

    '('  shift, and go to state 83


State 51

   37 Stmt: WHILE . '(' Exp ')' Stmt

    '('  shift, and go to state 84


State 52

   38 Stmt: RETURN . Exp ';'

    S_PLUS   shift, and go to state 32
    S_MINUS  shift, and go to state 33
    '-'      shift, and go to state 34
    '!'      shift, and go to state 35
    '('      shift, and go to state 36
    ID       shift, and go to state 37
    C_INT    shift, and go to state 38
    C_FLOAT  shift, and go to state 39
    C_CHAR   shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42

    Exp  go to state 85


State 53

   33 Stmt: ID . '=' Exp ';'
   34     | ID . OP_ASSIGN Exp ';'
   57 Exp: ID .
   63    | ID . '(' RParamList ')'
   64    | ID . '.' ID

    '.'        shift, and go to state 66
    '='        shift, and go to state 86
    '('        shift, and go to state 67
    OP_ASSIGN  shift, and go to state 87

    $default  reduce using rule 57 (Exp)


State 54

   40 Stmt: VarDec .

    $default  reduce using rule 40 (Stmt)


State 55

   39 Stmt: CompSt .

    $default  reduce using rule 39 (Stmt)


State 56

   29 CompSt: '{' StmtList . '}'

    '}'  shift, and go to state 88


State 57

   31 StmtList: Stmt . StmtList

    S_PLUS   shift, and go to state 32
    S_MINUS  shift, and go to state 33
    '-'      shift, and go to state 34
    '!'      shift, and go to state 35
    '('      shift, and go to state 36
    '{'      shift, and go to state 27
    IF       shift, and go to state 50
    WHILE    shift, and go to state 51
    RETURN   shift, and go to state 52
    STRUCT   shift, and go to state 1
    ID       shift, and go to state 53
    C_INT    shift, and go to state 38
    C_FLOAT  shift, and go to state 39
    C_CHAR   shift, and go to state 40
    INT      shift, and go to state 2
    FLOAT    shift, and go to state 3
    CHAR     shift, and go to state 4
    BOOL     shift, and go to state 5
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42

    $default  reduce using rule 30 (StmtList)

    VarDec      go to state 54
    Specificer  go to state 30
    CompSt      go to state 55
    StmtList    go to state 89
    Stmt        go to state 57
    Exp         go to state 58


State 58

   32 Stmt: Exp . ';'
   41 Exp: Exp . '+' Exp
   42    | Exp . '-' Exp
   43    | Exp . '*' Exp
   44    | Exp . '/' Exp
   45    | Exp . '%' Exp
   46    | Exp . REL_OP Exp
   49    | Exp . S_PLUS
   50    | Exp . S_MINUS
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   56    | Exp . ',' Exp

    S_PLUS   shift, and go to state 68
    S_MINUS  shift, and go to state 69
    '+'      shift, and go to state 70
    '-'      shift, and go to state 71
    '*'      shift, and go to state 72
    '/'      shift, and go to state 73
    '%'      shift, and go to state 74
    AND      shift, and go to state 75
    OR       shift, and go to state 76
    ','      shift, and go to state 77
    ';'      shift, and go to state 90
    REL_OP   shift, and go to state 78


State 59

   27 VarDecList: VarDec VarDecList .

    $default  reduce using rule 27 (VarDecList)


State 60

   23 Specificer: STRUCT TagOpt '{' VarDecList '}' .

    $default  reduce using rule 23 (Specificer)


State 61

   41 Exp: Exp . '+' Exp
   42    | Exp . '-' Exp
   43    | Exp . '*' Exp
   44    | Exp . '/' Exp
   45    | Exp . '%' Exp
   46    | Exp . REL_OP Exp
   47    | S_PLUS Exp .
   49    | Exp . S_PLUS
   50    | Exp . S_MINUS
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   56    | Exp . ',' Exp

    S_PLUS   shift, and go to state 68
    S_MINUS  shift, and go to state 69

    $default  reduce using rule 47 (Exp)


State 62

   41 Exp: Exp . '+' Exp
   42    | Exp . '-' Exp
   43    | Exp . '*' Exp
   44    | Exp . '/' Exp
   45    | Exp . '%' Exp
   46    | Exp . REL_OP Exp
   48    | S_MINUS Exp .
   49    | Exp . S_PLUS
   50    | Exp . S_MINUS
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   56    | Exp . ',' Exp

    S_PLUS   shift, and go to state 68
    S_MINUS  shift, and go to state 69

    $default  reduce using rule 48 (Exp)


State 63

   41 Exp: Exp . '+' Exp
   42    | Exp . '-' Exp
   43    | Exp . '*' Exp
   44    | Exp . '/' Exp
   45    | Exp . '%' Exp
   46    | Exp . REL_OP Exp
   49    | Exp . S_PLUS
   50    | Exp . S_MINUS
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   54    | '-' Exp .
   56    | Exp . ',' Exp

    S_PLUS   shift, and go to state 68
    S_MINUS  shift, and go to state 69

    $default  reduce using rule 54 (Exp)


State 64

   41 Exp: Exp . '+' Exp
   42    | Exp . '-' Exp
   43    | Exp . '*' Exp
   44    | Exp . '/' Exp
   45    | Exp . '%' Exp
   46    | Exp . REL_OP Exp
   49    | Exp . S_PLUS
   50    | Exp . S_MINUS
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | '!' Exp .
   56    | Exp . ',' Exp

    S_PLUS   shift, and go to state 68
    S_MINUS  shift, and go to state 69

    $default  reduce using rule 53 (Exp)


State 65

   41 Exp: Exp . '+' Exp
   42    | Exp . '-' Exp
   43    | Exp . '*' Exp
   44    | Exp . '/' Exp
   45    | Exp . '%' Exp
   46    | Exp . REL_OP Exp
   49    | Exp . S_PLUS
   50    | Exp . S_MINUS
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   55    | '(' Exp . ')'
   56    | Exp . ',' Exp

    S_PLUS   shift, and go to state 68
    S_MINUS  shift, and go to state 69
    '+'      shift, and go to state 70
    '-'      shift, and go to state 71
    '*'      shift, and go to state 72
    '/'      shift, and go to state 73
    '%'      shift, and go to state 74
    AND      shift, and go to state 75
    OR       shift, and go to state 76
    ','      shift, and go to state 77
    ')'      shift, and go to state 91
    REL_OP   shift, and go to state 78


State 66

   64 Exp: ID '.' . ID

    ID  shift, and go to state 92


State 67

   63 Exp: ID '(' . RParamList ')'

    S_PLUS   shift, and go to state 32
    S_MINUS  shift, and go to state 33
    '-'      shift, and go to state 34
    '!'      shift, and go to state 35
    '('      shift, and go to state 36
    ID       shift, and go to state 37
    C_INT    shift, and go to state 38
    C_FLOAT  shift, and go to state 39
    C_CHAR   shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42

    $default  reduce using rule 65 (RParamList)

    Exp         go to state 93
    RParamList  go to state 94
    RParam      go to state 95


State 68

   49 Exp: Exp S_PLUS .

    $default  reduce using rule 49 (Exp)


State 69

   50 Exp: Exp S_MINUS .

    $default  reduce using rule 50 (Exp)


State 70

   41 Exp: Exp '+' . Exp

    S_PLUS   shift, and go to state 32
    S_MINUS  shift, and go to state 33
    '-'      shift, and go to state 34
    '!'      shift, and go to state 35
    '('      shift, and go to state 36
    ID       shift, and go to state 37
    C_INT    shift, and go to state 38
    C_FLOAT  shift, and go to state 39
    C_CHAR   shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42

    Exp  go to state 96


State 71

   42 Exp: Exp '-' . Exp

    S_PLUS   shift, and go to state 32
    S_MINUS  shift, and go to state 33
    '-'      shift, and go to state 34
    '!'      shift, and go to state 35
    '('      shift, and go to state 36
    ID       shift, and go to state 37
    C_INT    shift, and go to state 38
    C_FLOAT  shift, and go to state 39
    C_CHAR   shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42

    Exp  go to state 97


State 72

   43 Exp: Exp '*' . Exp

    S_PLUS   shift, and go to state 32
    S_MINUS  shift, and go to state 33
    '-'      shift, and go to state 34
    '!'      shift, and go to state 35
    '('      shift, and go to state 36
    ID       shift, and go to state 37
    C_INT    shift, and go to state 38
    C_FLOAT  shift, and go to state 39
    C_CHAR   shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42

    Exp  go to state 98


State 73

   44 Exp: Exp '/' . Exp

    S_PLUS   shift, and go to state 32
    S_MINUS  shift, and go to state 33
    '-'      shift, and go to state 34
    '!'      shift, and go to state 35
    '('      shift, and go to state 36
    ID       shift, and go to state 37
    C_INT    shift, and go to state 38
    C_FLOAT  shift, and go to state 39
    C_CHAR   shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42

    Exp  go to state 99


State 74

   45 Exp: Exp '%' . Exp

    S_PLUS   shift, and go to state 32
    S_MINUS  shift, and go to state 33
    '-'      shift, and go to state 34
    '!'      shift, and go to state 35
    '('      shift, and go to state 36
    ID       shift, and go to state 37
    C_INT    shift, and go to state 38
    C_FLOAT  shift, and go to state 39
    C_CHAR   shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42

    Exp  go to state 100


State 75

   51 Exp: Exp AND . Exp

    S_PLUS   shift, and go to state 32
    S_MINUS  shift, and go to state 33
    '-'      shift, and go to state 34
    '!'      shift, and go to state 35
    '('      shift, and go to state 36
    ID       shift, and go to state 37
    C_INT    shift, and go to state 38
    C_FLOAT  shift, and go to state 39
    C_CHAR   shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42

    Exp  go to state 101


State 76

   52 Exp: Exp OR . Exp

    S_PLUS   shift, and go to state 32
    S_MINUS  shift, and go to state 33
    '-'      shift, and go to state 34
    '!'      shift, and go to state 35
    '('      shift, and go to state 36
    ID       shift, and go to state 37
    C_INT    shift, and go to state 38
    C_FLOAT  shift, and go to state 39
    C_CHAR   shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42

    Exp  go to state 102


State 77

   56 Exp: Exp ',' . Exp

    S_PLUS   shift, and go to state 32
    S_MINUS  shift, and go to state 33
    '-'      shift, and go to state 34
    '!'      shift, and go to state 35
    '('      shift, and go to state 36
    ID       shift, and go to state 37
    C_INT    shift, and go to state 38
    C_FLOAT  shift, and go to state 39
    C_CHAR   shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42

    Exp  go to state 103


State 78

   46 Exp: Exp REL_OP . Exp

    S_PLUS   shift, and go to state 32
    S_MINUS  shift, and go to state 33
    '-'      shift, and go to state 34
    '!'      shift, and go to state 35
    '('      shift, and go to state 36
    ID       shift, and go to state 37
    C_INT    shift, and go to state 38
    C_FLOAT  shift, and go to state 39
    C_CHAR   shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42

    Exp  go to state 104


State 79

   14 FuncHeader: ID '(' ParamList ')' .

    $default  reduce using rule 14 (FuncHeader)


State 80

   16 ParamList: Param ',' . ParamList

    STRUCT  shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    CHAR    shift, and go to state 4
    BOOL    shift, and go to state 5

    $default  reduce using rule 15 (ParamList)

    ParamList   go to state 105
    Param       go to state 45
    Specificer  go to state 46


State 81

   18 Param: Specificer ID .

    $default  reduce using rule 18 (Param)


State 82

   12 Var: Var '[' C_INT ']' .

    $default  reduce using rule 12 (Var)


State 83

   35 Stmt: IF '(' . Exp ')' Stmt
   36     | IF '(' . Exp ')' Stmt ELSE Stmt

    S_PLUS   shift, and go to state 32
    S_MINUS  shift, and go to state 33
    '-'      shift, and go to state 34
    '!'      shift, and go to state 35
    '('      shift, and go to state 36
    ID       shift, and go to state 37
    C_INT    shift, and go to state 38
    C_FLOAT  shift, and go to state 39
    C_CHAR   shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42

    Exp  go to state 106


State 84

   37 Stmt: WHILE '(' . Exp ')' Stmt

    S_PLUS   shift, and go to state 32
    S_MINUS  shift, and go to state 33
    '-'      shift, and go to state 34
    '!'      shift, and go to state 35
    '('      shift, and go to state 36
    ID       shift, and go to state 37
    C_INT    shift, and go to state 38
    C_FLOAT  shift, and go to state 39
    C_CHAR   shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42

    Exp  go to state 107


State 85

   38 Stmt: RETURN Exp . ';'
   41 Exp: Exp . '+' Exp
   42    | Exp . '-' Exp
   43    | Exp . '*' Exp
   44    | Exp . '/' Exp
   45    | Exp . '%' Exp
   46    | Exp . REL_OP Exp
   49    | Exp . S_PLUS
   50    | Exp . S_MINUS
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   56    | Exp . ',' Exp

    S_PLUS   shift, and go to state 68
    S_MINUS  shift, and go to state 69
    '+'      shift, and go to state 70
    '-'      shift, and go to state 71
    '*'      shift, and go to state 72
    '/'      shift, and go to state 73
    '%'      shift, and go to state 74
    AND      shift, and go to state 75
    OR       shift, and go to state 76
    ','      shift, and go to state 77
    ';'      shift, and go to state 108
    REL_OP   shift, and go to state 78


State 86

   33 Stmt: ID '=' . Exp ';'

    S_PLUS   shift, and go to state 32
    S_MINUS  shift, and go to state 33
    '-'      shift, and go to state 34
    '!'      shift, and go to state 35
    '('      shift, and go to state 36
    ID       shift, and go to state 37
    C_INT    shift, and go to state 38
    C_FLOAT  shift, and go to state 39
    C_CHAR   shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42

    Exp  go to state 109


State 87

   34 Stmt: ID OP_ASSIGN . Exp ';'

    S_PLUS   shift, and go to state 32
    S_MINUS  shift, and go to state 33
    '-'      shift, and go to state 34
    '!'      shift, and go to state 35
    '('      shift, and go to state 36
    ID       shift, and go to state 37
    C_INT    shift, and go to state 38
    C_FLOAT  shift, and go to state 39
    C_CHAR   shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42

    Exp  go to state 110


State 88

   29 CompSt: '{' StmtList '}' .

    $default  reduce using rule 29 (CompSt)


State 89

   31 StmtList: Stmt StmtList .

    $default  reduce using rule 31 (StmtList)


State 90

   32 Stmt: Exp ';' .

    $default  reduce using rule 32 (Stmt)


State 91

   55 Exp: '(' Exp ')' .

    $default  reduce using rule 55 (Exp)


State 92

   64 Exp: ID '.' ID .

    $default  reduce using rule 64 (Exp)


State 93

   41 Exp: Exp . '+' Exp
   42    | Exp . '-' Exp
   43    | Exp . '*' Exp
   44    | Exp . '/' Exp
   45    | Exp . '%' Exp
   46    | Exp . REL_OP Exp
   49    | Exp . S_PLUS
   50    | Exp . S_MINUS
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   56    | Exp . ',' Exp
   68 RParam: Exp .

    S_PLUS   shift, and go to state 68
    S_MINUS  shift, and go to state 69
    '+'      shift, and go to state 70
    '-'      shift, and go to state 71
    '*'      shift, and go to state 72
    '/'      shift, and go to state 73
    '%'      shift, and go to state 74
    AND      shift, and go to state 75
    OR       shift, and go to state 76
    REL_OP   shift, and go to state 78

    $default  reduce using rule 68 (RParam)


State 94

   63 Exp: ID '(' RParamList . ')'

    ')'  shift, and go to state 111


State 95

   66 RParamList: RParam . ',' RParamList
   67           | RParam .

    ','  shift, and go to state 112

    $default  reduce using rule 67 (RParamList)


State 96

   41 Exp: Exp . '+' Exp
   41    | Exp '+' Exp .
   42    | Exp . '-' Exp
   43    | Exp . '*' Exp
   44    | Exp . '/' Exp
   45    | Exp . '%' Exp
   46    | Exp . REL_OP Exp
   49    | Exp . S_PLUS
   50    | Exp . S_MINUS
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   56    | Exp . ',' Exp

    S_PLUS   shift, and go to state 68
    S_MINUS  shift, and go to state 69
    '*'      shift, and go to state 72
    '/'      shift, and go to state 73
    '%'      shift, and go to state 74
